--- a/Lab01 - JSFundamentals/DOMAndEvents/index.html
+++ b/Lab01 - JSFundamentals/DOMAndEvents/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM AND EVENTS</title>
+    <script defer src="./CodingChallenge.js"></script>
 </head>
 <body>
     <div class="again"></div>
